Initial commit of the mobile view

--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -28,6 +28,7 @@
         <button class="ghost" id="nav-invoices" style="display:none;">Invoices</button>
         <button class="ghost" id="nav-settings">Settings</button>
         <button class="ghost" id="nav-about">About</button>
+        <a class="ghost" href="?view=mobile" style="text-decoration:none;">Mobile Entry</a>
       </div>
     </div>
   </div>
