Further improvements to the mobile view

--- a/views/mobile.html
+++ b/views/mobile.html
@@ -5,6 +5,7 @@
     <?!= include('views/partials/head'); ?>
   </head>
   <body class="ts-body ts-theme-dark ts-mobile-shell">
+    <?!= include('views/partials/mobile-shell-scripts'); ?>
     <div id="ts-toast-container" class="ts-toast-container" aria-live="polite" aria-atomic="true"></div>
     <main class="ts-container" style="max-width:720px; padding-top:20px; padding-bottom:32px;">
       <?!= include('views/partials/mobile-entry'); ?>
